--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -55,7 +55,7 @@
         <div th:replace="dashboard::#leftbar"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <h2><button class="btn btn-sm btn-success">添加员工</button></h2>
+            <h2><a class="btn btn-sm btn-success" href="/emp" th:href="@{/emp}" >添加员工</a></h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
@@ -80,7 +80,8 @@
                         <!-- 日期做格式化 -->
                         <td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd')}"></td>
                         <td>
-                            <button class="btn btn-sm btn-primary">编辑</button>
+                            <!-- 这里的链接是一个拼接起来的，/emp/{id} get 方法，中间用+连接-->
+                            <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}" >编辑</a>
                             <button class="btn btn-sm btn-danger">删除</button>
                         </td>
                     </tr>
